[tool.poetry]
name = "web-2"
version = "0.1.0"
description = ""
authors = ["kirienkovitaliy <kirienkovitaliy1989@gmail.com>"]
readme = "README.md"
packages = [{include = "web_2"}]

[tool.poetry.dependencies]
python = "^3.11"
inquirer = "^3.1.3"
colorama = "^0.4.6"
prettytable = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
